--- a/p1/Vagrantfile
+++ b/p1/Vagrantfile
@@ -3,24 +3,28 @@
 
 Vagrant.configure("2") do |config|
   # Common configuration for all VMs
-  config.vm.box = "bento/ubuntu-22.04-arm64"
+  config.vm.box = "roboxes/ubuntu2204"
+
+  config.vm.boot_timeout = 600 # Boot timeout to 10 minutes
   
+  # Basic SSH settings
+  config.ssh.insert_key = true
+  config.ssh.forward_agent = true
+
   # Server VM
   config.vm.define "acoezardS" do |server|
     server.vm.hostname = "acoezardS"
     server.vm.network "private_network", ip: "192.168.56.110"
     
-    # VM resources
+    # VirtualBox config - for running inside UTM VM
     server.vm.provider "virtualbox" do |vb|
-      vb.memory = 1024
-      vb.cpus = 1
+      vb.memory = 1024  # 1024MB as recommended in the subject
+      vb.cpus = 1       # 1 CPU as recommended in the subject
+      vb.name = "acoezardS"
     end
     
     # Provisioning
     server.vm.provision "shell", path: "scripts/install_k3s_server.sh"
-    
-    # Forward SSH key for authentication
-    server.ssh.forward_agent = true
   end
   
   # Worker VM
@@ -28,16 +32,14 @@ Vagrant.configure("2") do |config|
     worker.vm.hostname = "acoezardSW"
     worker.vm.network "private_network", ip: "192.168.56.111"
     
-    # VM resources
+    # VirtualBox config - for running inside UTM VM
     worker.vm.provider "virtualbox" do |vb|
-      vb.memory = 1024
-      vb.cpus = 1
+      vb.memory = 1024  # Use 1024MB as recommended in the subject
+      vb.cpus = 1       # Use 1 CPU as recommended in the subject
+      vb.name = "acoezardSW"
     end
     
     # Provisioning
     worker.vm.provision "shell", path: "scripts/install_k3s_agent.sh"
-    
-    # Forward SSH key for authentication
-    worker.ssh.forward_agent = true
   end
 end 
