--- a/p2/confs/app1.yaml
+++ b/p2/confs/app1.yaml
@@ -1,37 +1,34 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: app-one
-  labels:
-    app: app-one
+  name: app1
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: app-one
+      app: app1
   template:
     metadata:
       labels:
-        app: app-one
+        app: app1
     spec:
       containers:
-      - name: app-one
-        image: paulbouwer/hello-kubernetes:1.10
-        ports:
-        - containerPort: 8080
+      - name: app1
+        image: paulbouwer/hello-kubernetes:1.8
         env:
         - name: MESSAGE
           value: "Hello from app1."
-
+        ports:
+        - containerPort: 8080
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: app-one
+  name: app1
 spec:
   selector:
-    app: app-one
+    app: app1
   ports:
-  - port: 80
+  - protocol: TCP
+    port: 80
     targetPort: 8080
-  type: ClusterIP 
