--- a/p2/confs/app3.yaml
+++ b/p2/confs/app3.yaml
@@ -1,37 +1,34 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: app-three
-  labels:
-    app: app-three
+  name: app3
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: app-three
+      app: app3
   template:
     metadata:
       labels:
-        app: app-three
+        app: app3
     spec:
       containers:
-      - name: app-three
-        image: paulbouwer/hello-kubernetes:1.10
-        ports:
-        - containerPort: 8080
+      - name: app3
+        image: paulbouwer/hello-kubernetes:1.8
         env:
         - name: MESSAGE
-          value: "Hello from app3."  # Custom message for app3
-
+          value: "Hello from app3."
+        ports:
+        - containerPort: 8080
 ---
-# App3 Service
 apiVersion: v1
 kind: Service
 metadata:
-  name: app-three
+  name: app3
 spec:
   selector:
-    app: app-three
+    app: app3
   ports:
-  - port: 80
+  - protocol: TCP
+    port: 80
     targetPort: 8080
