--- a/p1/Vagrantfile
+++ b/p1/Vagrantfile
@@ -2,7 +2,8 @@
 # vi: set ft=ruby :
 
 Vagrant.configure("2") do |config|
-  config.vm.box = "ubuntu/focal64"
+  # config.vm.box = "ubuntu/focal64"
+  config.vm.box = "generic/ubuntu2004"
 
   # Configuration globale pour VirtualBox
   config.vm.provider "virtualbox" do |vb|
